--- a/ecogenomiquerdossier.Rmd
+++ b/ecogenomiquerdossier.Rmd
@@ -56,7 +56,6 @@ library(dplyr)
 library(reshape2)
 library(ade4)
 library(ggrepel)
-
 ```
 
 ```{r, include = FALSE}
@@ -675,6 +674,7 @@ plot_ordination(pslog, out.wuf.log, color = "age_binned",
 ####Aspect ratio of ordination plots
 
 ####PCA on ranks
+
 ```{r}
 abund <- otu_table(pslog)
 abund_ranks <- t(apply(abund, 1, rank))
@@ -684,18 +684,14 @@ abund_ranks[abund_ranks < 1] <- 1
 ```
 
 ```{r}
-abund_df <- melt(abund, value.name = "abund") %>%
-  left_join(melt(abund_ranks, value.name = "rank"))
+abund_df <- melt(abund, value.name = "abund") %>% left_join(melt(abund_ranks, value.name = "rank"))
 colnames(abund_df) <- c("sample", "seq", "abund", "rank")
 
-abund_df <- melt(abund, value.name = "abund") %>%
-  left_join(melt(abund_ranks, value.name = "rank"))
+abund_df <- melt(abund, value.name = "abund") %>% left_join(melt(abund_ranks, value.name = "rank"))
 colnames(abund_df) <- c("sample", "seq", "abund", "rank")
 
 sample_ix <- sample(1:nrow(abund_df), 8)
-ggplot(abund_df %>%
-         filter(sample %in% abund_df$sample[sample_ix])) +geom_point(aes(x = abund, y = rank, col = sample),
-             position = position_jitter(width = 0.2), size = 1.5) +labs(x = "Abundance", y = "Thresholded rank") + scale_color_brewer(palette = "Set2")
+ggplot(abund_df %>% filter(sample %in% abund_df$sample[sample_ix])) +geom_point(aes(x = abund, y = rank, col = sample), position = position_jitter(width = 0.2), size = 1.5) +labs(x = "Abundance", y = "Thresholded rank") + scale_color_brewer(palette = "Set2")
 ```
 
 ```{r}
@@ -710,12 +706,30 @@ tax$Order[!(tax$Order %in% main_orders)] <- "Other"
 tax$Order <- factor(tax$Order, levels = c(main_orders, "Other"))
 tax$otu_id <- seq_len(ncol(otu_table(ps)))
 row_scores <- row_scores %>% left_join(sample_data(pslog))
-col_scores <- col_scores %>% left_join(tax)
 ```
 
 ```{r}
 evals_prop <- 100 * (ranks_pca$eig / sum(ranks_pca$eig))
 ggplot() + geom_point(data = row_scores, aes(x = li.Axis1, y = li.Axis2), shape = 2) + geom_point(data = col_scores, aes(x = 25 * co.Comp1, y = 25 * co.Comp2, col = Order), size = .3, alpha = 0.6) + scale_color_brewer(palette = "Set2") + facet_grid(~ age_binned) + guides(col = guide_legend(override.aes = list(size = 3))) + labs(x = sprintf("Axis1 [%s%% variance]", round(evals_prop[1], 2)), y = sprintf("Axis2 [%s%% variance]", round(evals_prop[2], 2))) + coord_fixed(sqrt(ranks_pca$eig[2] / ranks_pca$eig[1])) + theme(panel.border = element_rect(color = "#787878", fill = alpha("white", 0)))
+```
+
+```{r}
+col_scores <- col_scores %>% left_join(tax)
+```
+
+```{r}
+evals_prop <- 100 * (ranks_pca$eig / sum(ranks_pca$eig))
+ggplot() +
+  geom_point(data = row_scores, aes(x = li.Axis1, y = li.Axis2), shape = 2) +
+  geom_point(data = col_scores, aes(x = 25 * co.Comp1, y = 25 * co.Comp2, col = Order),
+             size = .3, alpha = 0.6) +
+  scale_color_brewer(palette = "Set2") +
+  facet_grid(~ age_binned) +
+  guides(col = guide_legend(override.aes = list(size = 3))) +
+  labs(x = sprintf("Axis1 [%s%% variance]", round(evals_prop[1], 2)),
+       y = sprintf("Axis2 [%s%% variance]", round(evals_prop[2], 2))) +
+  coord_fixed(sqrt(ranks_pca$eig[2] / ranks_pca$eig[1])) +
+  theme(panel.border = element_rect(color = "#787878", fill = alpha("white", 0)))
 ```
 
 ####Canonical correspondence
@@ -729,10 +743,38 @@ ps_scores <- vegan::scores(ps_ccpna)
 sites <- data.frame(ps_scores$sites)
 sites$SampleID <- rownames(sites)
 sites <- sites %>% left_join(sample_data(ps))
+```
 
+```{r}
 species <- data.frame(ps_scores$species)
 species$otu_id <- seq_along(colnames(otu_table(ps)))
 species <- species %>% left_join(tax)
+```
+
+```{r}
 evals_prop <- 100 * ps_ccpna$CCA$eig[1:2] / sum(ps_ccpna$CA$eig)
 ggplot() + geom_point(data = sites, aes(x = CCA1, y = CCA2), shape = 2, alpha = 0.5) + geom_point(data = species, aes(x = CCA1, y = CCA2, col = Order), size = 0.5) + geom_text_repel(data = species %>% filter(CCA2 < -2), aes(x = CCA1, y = CCA2, label = otu_id), size = 1.5, segment.size = 0.1) + facet_grid(. ~ family_relationship) + guides(col = guide_legend(override.aes = list(size = 3))) + labs(x = sprintf("Axis1 [%s%% variance]", round(evals_prop[1], 2)), y = sprintf("Axis2 [%s%% variance]", round(evals_prop[2], 2))) + scale_color_brewer(palette = "Set2") + coord_fixed(sqrt(ps_ccpna$CCA$eig[2] / ps_ccpna$CCA$eig[1])*0.45   ) + theme(panel.border = element_rect(color = "#787878", fill = alpha("white", 0)))
 ```
+
+```{r}
+qplot(sample_data(ps)$age, geom = "histogram",binwidth=20) + xlab("age")
+```
+
+```{r}
+qplot(log10(rowSums(otu_table(ps))),binwidth=0.2) + xlab("Logged counts-per-sample")
+```
+
+```{r}
+sample_data(ps)$age_binned <- cut(sample_data(ps)$age, breaks = c(0, 100, 200, 400))
+levels(sample_data(ps)$age_binned) <- list(Young100="(0,100]", Mid100to200="(100,200]", Old200="(200,400]")
+sample_data(ps)$family_relationship=gsub(" ","",sample_data(ps)$family_relationship)
+pslog <- transform_sample_counts(ps, function(x) log(1 + x))
+out.wuf.log <- ordinate(pslog, method = "MDS", distance = "wunifrac")
+```
+
+```{r}
+evals <- out.wuf.log$values$Eigenvalues
+plot_ordination(pslog, out.wuf.log, color = "age_binned") + labs(col = "Binned Age") + coord_fixed(sqrt(evals[2] / evals[1]))
+```
+
+
